--- a/Perspective Photo Animation/Base.lproj/Main.storyboard
+++ b/Perspective Photo Animation/Base.lproj/Main.storyboard
@@ -47,6 +47,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="previewView" destination="NbO-j1-Rgy" id="Dk5-Bh-gz1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
